# asm-os

./: .gitignore  Cargo.toml  LICENSE.txt  start.sh
.cargo/: config.toml
src/: emul.rs  lib.rs  main.rs  nub.rs  util.rs
src/api/: char.rs  chrono.rs  io.rs  kbd.rs  keyboard.rs  mod.rs  system.rs  vga.rs
src/api/vga/: color.rs  cursor.rs  font.rs  palette.rs
src/arch/: mod.rs
src/arch/x86/: mod.rs
src/aux/: emulator.rs  error.rs  logger.rs  mod.rs  testing.rs  units.rs
src/aux/emulator/: mod.rs  qemu.rs
src/auxiliary/: logger.rs  testing.rs
src/cenc/: ascii.rs  mod.rs
src/dev/: console.rs  mod.rs
src/devices/: console.rs  mod.rs
src/drivers/: keyboard.rs  mod.rs  serial.rs  vga.rs
src/drv/: mod.rs
src/drv/clk/: cmos.rs  mod.rs  pit.rs
src/drv/input/: kbd.rs  mod.rs
src/drv/ipd/: kbd.rs
src/drv/opd/: serial.rs  vga.rs
src/drv/output/: mod.rs  serial.rs  vga.rs
src/encodings/: ascii.rs  charset.rs  mod.rs
src/helper/: testing.rs
src/kernel/: acpi.rs  allocator.rs  apic.rs  cmos.rs  error.rs  gdt.rs  idt.rs  interrupts.rs  keyboard.rs  memory.rs  mod.rs  pics.rs  pit.rs  power.rs  serial.rs  task.rs  vga.rs  vga_buffer.rs
src/kernel/acpi/: dsdt.rs  fadt.rs  madt.rs
src/krnl/: acpi.rs  allocator.rs  gdt.rs  idt.rs  memory.rs  mod.rs  pit.rs  power.rs  task.rs
src/nub/: allocator.rs  gdt.rs  interrupts.rs  serial.rs  task.rs  vga_buffer.rs
src/usr/: chrono.rs  clear.rs  kbd.rs  list.rs  mod.rs  reboot.rs  shell.rs  shutdown.rs  vga.rs
tests/: basic_boot.rs  breakpoint_exception.rs  heap_allocation.rs  stack_overflow.rs
(+28 files in other folders)
