[package]
name = "asm-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = "4.1.1"
aml = "0.16.3"
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
linked_list_allocator = "0.10.5"
pc-keyboard = "0.7.0"
pic8259 = "0.10.1"
raw-cpuid = "10.7.0"
spin = "0.9.6"
uart_16550 = "0.2.0"
volatile = "0.2.6"
vte = "0.11.0"
x86_64 = "0.14.2"
x86 = "0.52.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
test-timeout = 300
